dhall/tests/type-inference/failure/unit/AssertTriviallyFalse.txt
Type error: error: AssertMismatch
 --> <current file>:1:1
  |
1 | assert : 1 === 2
  | ^^^^^^^^^^^^^^^^ AssertMismatch
  |
